modified:   README.md 	new file:   Reforance.md 	modified:   SCU-QTimage.pro.user 	modified:   dialog/aboutdialog.cpp 	modified:   dialog/aboutdialog.ui 	modified:   mainwindow/mainwindow.cpp 	modified:   mainwindow/mainwindow.h 	modified:   mainwindow/mainwindow.ui 	modified:   res/doClose.svg 	modified:   res/doRestore.svg 	modified:   res/doWarm.svg 	new file:   res/do_adjust.png 	modified:   res/do_adjust.svg 	modified:   res/do_adjust_left.svg 	modified:   res/do_adjust_right.svg 	modified:   tools/algorithm.cpp 	modified:   tools/algorithm.h 	modified:   tools/gaussblur.cpp 	modified:   tools/gaussblur.h

--- a/dialog/aboutdialog.ui
+++ b/dialog/aboutdialog.ui
@@ -79,7 +79,7 @@ QPushButton:pressed
 </string>
    </property>
    <property name="text">
-    <string>源码获取</string>
+    <string>开发历程</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
