--- a/mainwindow/mainwindow.ui
+++ b/mainwindow/mainwindow.ui
@@ -111,16 +111,34 @@
     <addaction name="doSimple"/>
     <addaction name="doGauss"/>
    </widget>
+   <widget class="QMenu" name="menu_ts">
+    <property name="title">
+     <string>特殊</string>
+    </property>
+    <addaction name="doGrayscale"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
    <addaction name="menuGeometric"/>
    <addaction name="menuArtistic_Effect"/>
    <addaction name="menu_mh"/>
+   <addaction name="menu_ts"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="toolBar_File">
    <property name="windowTitle">
     <string>文件</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QToolBar" name="toolBar_Edit">
+   <property name="windowTitle">
+    <string>变幻</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -151,17 +169,6 @@
     <bool>false</bool>
    </attribute>
   </widget>
-  <widget class="QToolBar" name="toolBar_About">
-   <property name="windowTitle">
-    <string>关于和退出</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
   <widget class="QToolBar" name="toolBar_Cal">
    <property name="windowTitle">
     <string>计算</string>
@@ -173,9 +180,9 @@
     <bool>false</bool>
    </attribute>
   </widget>
-  <widget class="QToolBar" name="toolBar_Edit">
+  <widget class="QToolBar" name="toolBar_About">
    <property name="windowTitle">
-    <string>变幻</string>
+    <string>关于和退出</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
